project('A-004', 'c',
        version : '1.0',
        default_options : ['warning_level=3', 'c_std=c99']
)

#--------------------------
ProjectSourceList = []
#--------------------------
RootDirectory = ''


subdir('sources')


executable('A-004', ProjectSourceList,
           include_directories : RootDirectory
)