UtilsSources = files(
    'CoreData.c'
)

ProjectSources += UtilsSources

#UtilsTestSources = files(
#    'UnitTests' / 'CoreDataTest.cpp'
#)
#UtilsTestSources += UtilsSources
#
#
#UtilsTest = executable(
#    'UtilsTest', UtilsTestSources,
#    include_directories : RootDirectory
#)
#
#test('UtilsTest', UtilsTest)